Issue #10350: Read and save errno before calling a function which might overwrite it. Original patch by Hallvard B Furuseth.